# loco

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  main.rs  models.rs  output.rs
src/client/: assets.rs  auth.rs  export.rs  import.rs  locales.rs  mod.rs  tags.rs  translations.rs
src/commands/: assets.rs  auth.rs  init.rs  locales.rs  mod.rs  pull.rs  push.rs  status.rs  strings.rs  tags.rs  translations.rs
tests/: cli_assets_test.rs  cli_auth_test.rs  cli_locales_test.rs  cli_pull_test.rs  cli_push_test.rs  cli_status_test.rs  cli_tags_test.rs  cli_translations_test.rs
tests/common/: mod.rs
tests/e2e/: auth.rs  common.rs  locales.rs  mod.rs  pull_push.rs  status.rs  strings.rs  tags.rs
