[package]
name = "loco-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the localise.biz translation management API"
license = "MIT"
repository = "https://github.com/user/loco-cli"
readme = "README.md"

[[bin]]
name = "loco-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1.11.1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
